--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 <body>
 
 	<div class="navbar">
-		<ul>
+
+		<ul id="topbar">
 			<li> +You </li>
 			<li> Gmail </li>
 			<li> Images </li>
 			<li> Sign in </li>
 		</ul>
-
-
 
 	</div>
 
@@ -33,12 +32,28 @@
 			
 		</form>
 
+		<br>
+
+		<button type="button">Google Search</button>
+		<button type="button">I'm Feeling Lucky</button>
+
 
 	</div>
 
+	<div class="bottom">	
 
+		<ul>
+			<li class="left"> Advertising </li>
+			<li class="left"> Business </li>
+			<li class="left"> About </li>		
 
+		
+			<li class="right"> Privacy & Terms </li>
+			<li class="right"> Settings </li>
 
+		</ul>
+
+	</div>
 
 
 	</body>
