--- a/EtchNSketch/index.html
+++ b/EtchNSketch/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <link rel="stylesheet" type="text/css" href="sketch.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="etch.js"></script>
+
 </head>
+
 <body>
-	<h2><a href ="#">Reset Etch N Sketch</a></h2>
+	<h2><a href ="#" onclick="reset(); return false;">Reset Etch N Sketch</a></h2>
+	<div id="container"> </div>
+	<p>Right click then move mouse to get to a different area on the board</p>
+
 </body>
+	
+
+
 
 </html>
